# brain_craft

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
src/garbage_collector_bfo/: self_free.c  self_free.h
src/libraries/math_bfo/: batch_operations.c  batch_operations.h  calculus.c  calculus.h  matrix_operations.c  matrix_operations.h  matrix_operations_paralell.c  matrix_operations_parallel.c
src/libraries/math_bfo/print/: my_print.c  my_print.h
src/libraries/math_bfo/random_bfo/: statistical_random.c  statistical_random.h
src/libraries/string_bfo/: String_array_struct.c  String_struct.h  String_struct_formatting.c
src/libraries/terminal_bfo/: terminal_funcs.h
src/libraries/terminal_bfo/colors_bfo/: colors.h
src/libraries/terminal_bfo/progress_bar/: progres_bar.c  progres_bar.h
src/libraries/tests_bfo/: test_funcs.c
src/neural_bfo/: node.h  utility_nodes.h
src/neural_bfo/nodes/: communication_structures.c  communication_structures.h  fully_connected_nodes.c  fully_connected_nodes.h  input_nodes.c  input_nodes.h  loss_nodes.c  loss_nodes.h  node.c  node.h  output_nodes.c  output_nodes.h  regularization_nodes.c  regularization_nodes.h  utility_nodes.c  utility_nodes.h
src/neural_bfo/optimizers/: optimizer.c  optimizer.h
src/neural_bfo/regularizers/: regularizer.c  regularizer.h
src/tests/: tests.c  tests.h
